// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Spacer ⚠️  With margin 1`] = `
<div
  className="sc-dNLxif cRIUiY"
>
  <div
    className="sc-kafWEX jYWYEz"
  >
    <p
      className="sc-bxivhb kFVWeI"
    >
      This has a margin.
    </p>
  </div>
</div>
`;

exports[`Storyshots Spacer ⚠️  With padding 1`] = `
<div
  className="sc-kafWEX jYWYEz"
>
  <div
    className="sc-dNLxif kXdeJR"
  >
    <p
      className="sc-bxivhb kFVWeI"
    >
      This has padding.
    </p>
  </div>
</div>
`;
